--- a/cosinnus/static/sass/_general.scss
+++ b/cosinnus/static/sass/_general.scss
@@ -374,7 +374,6 @@ a.portal-inlink:hover img {
 .file-upload-overlay {
     position: relative;
     overflow: hidden;
-    float: right;
     clear: right;
     display: inline;
     padding-top: 2px;
@@ -385,6 +384,8 @@ a.portal-inlink:hover img {
         top: 0;
         right: 0;
         opacity: 0;
+	    width: 100%;
+	    height: 100%;
         font-size: 100px;
         filter: alpha(opacity=0);
         cursor: pointer;" 
